style: work on mobile header img fix

--- a/css/style.css
+++ b/css/style.css
@@ -204,8 +204,8 @@ section {
 
 @media (max-width: 767px) {
   header {
-  /* min-height: 100lvh; */
-  min-height: 800px;
+  min-height: 100lvh;
+  /* min-height: 800px; */
   }
   article {
     min-height: 100vh;
